--- a/styles/main.scss
+++ b/styles/main.scss
@@ -57,7 +57,7 @@ body {
     }
   }
 
-  #store, #authorBooks {
+  #store {
     width: 90%;
     display: flex;
     flex-flow: row wrap;
@@ -72,6 +72,11 @@ body {
       .sale-badge {
         font-size: 1em;
         background-color: blue;
+      }
+
+      .favorite-badge {
+        font-size: 1em;
+        background-color: gold;
       }
     }
 
